just commet out the season greeting code and change the title

--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Season Greating</title>
+    <title>Akuma Isaac Akuma</title>
     <link rel="stylesheet" href="/dist/css/app.min.css">
 </head>
 <body>
     <div id="app">
         <header>
-            <h1>Season Greatings </h1>
+            <h1>Hello dear 💞 💖 Welcome to my web page</h1>
         </header>
         <main>
-            <h5>Let's Create Something Awesome This Year</h5>
+            <h5>NO LIMIT</h5>
         </main>
         <footer>
-            <a>Akuma Isaac Akuma</a>
+            <a href="https://twitter.com/@DeAkumzy" target="_blank">Akuma Isaac Akuma</a>
         </footer>
     </div>
     <script src="/src/main.js"></script>
